--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         window.onload = insertData
     </script>
-    <title id="title1"></title>
+    <title id="title1">aaa</title>
   </head>
   <body>
     <h1 id="title2"></h1>
